kubernetes/plataform.yml
# service.yaml
apiVersion: v1
kind: Service
metadata:
 name: sbtest-service
spec:
 type: NodePort
 selector:
   app: sbtest-service
 ports:
   - protocol: TCP
     port: 8080
     targetPort: 8080
# service.yaml
# apiVersion: v1
# kind: Service
# metadata:
#   name: sbtest-service
# spec:
#   type: ClusterIP
#   selector:
#     app: sbtest-service
#   ports:
#     - protocol: TCP
#       port: 8080
#       targetPort: 8080
---
# deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sbtest-service-deployment
  labels:
    app: sbtest-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sbtest-service
  template:
    metadata:
      labels:
        app: sbtest-service
    spec:
      containers:
        - name: sbtest-service-container
          image: nexus.registry.com.br/springboot-test:0.0.1-alpine
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
